# b2052312

./: README.md  main.cpp  matrix.h
1/: main.cpp  matrix.cpp  matrix.h
2/: CMakeLists.txt  TASK.txt  relevant information.docx
2/src/Console/: CMakeLists.txt
2/src/Console/src/: inputs.cpp  inputs.h  main.cpp
2/src/Hypocycloid/: CMakeLists.txt
2/src/Hypocycloid/src/: Hypocycloid.cpp  Hypocycloid.h
2/src/Tests/: CMakeLists.txt
2/src/Tests/src/: HypocycloidTest.cpp
3/: CMakeLists.txt
3/src/Console/: CMakeLists.txt
3/src/Console/src/: dialog.cpp  dialog.h  main.cpp
3/src/PCB/src/: PCB.cpp  PCB.h
3/src/Tests/: CMakeLists.txt
3/src/Tests/src/: PCBTest.cpp
3c/src/Console/: CMakeLists.txt
3c/src/Console/src/: dialog.h  (+2 more)
3c/src/PCB/: CMakeLists.txt
3c/src/Tests/: CMakeLists.txt
3d/: CMakeLists.txt  task.txt
3d/src/Proga/: CMakeLists.txt
3d/src/Vector/: CMakeLists.txt
4/: CMakeLists.txt  Construction.h  Deceleration.h  Effect.h  Enemy.cpp  Enemy.h  Game.cpp  Lair.h  Level.h  Liar.h  Magic.h  MagicTower.cpp  MagicTower.h  Object.h  Poisoning.cpp  StatefulObject.h  Strategy.h  Tile.h  Tower.cpp  Tower.h  Trap.h  Weakening.h  castle.h  game.h
4/headers/: Construction.h  Effect.h  Enemy.h  Game.h  Level.h  Liar.h  Magic.h  MagicTower.h  Poisoning.h  StatefulObject.h  Tile.h  Trap.h
4/source/: Deceleration.cpp  Enemy.cpp  Game.cpp  MagicTower.cpp  Tile.cpp  Weakening.cpp
4/src/Console/: CMakeLists.txt
4/src/TowerDefence/: CMakeLists.txt
mytemplate/: CMakeLists.txt
mytemplate/src/Tests/: CMakeLists.txt
mytemplate/src/Vector/: Vector.h
(+41 files in other folders)
